frontend/main/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-frontend-deployment
  labels:
    app: main-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-frontend
  template:
    metadata:
      labels:
        app: main-frontend
    spec:
      containers:
      - name: main-frontend
        image: 049061799945.dkr.ecr.ap-northeast-1.amazonaws.com/shopping-site-main:87df1e70e3dea3ba448a7dac2acde8196549a114
        ports:
        - containerPort: 80
